@@ -66,7 +66,8 @@ if REQUEST.has_key(\'portal_skin\'):\n
    context.portal_skins.clearSkinCookie()\n
 REQUEST.RESPONSE.expireCookie(\'__ac\', path=\'/\')\n
 msg = N_(\'You have been logged out. Thank you for using this website.\')\n
-return website.Base_redirect(form_id, keep_items = {\'portal_status_message\' : msg},  **kw)\n
+return website.Base_redirect(form_id, keep_items = {\'portal_status_message\' : msg},\n
+                             editable_mode=editable_mode, **kw)\n
 </string> </value>
         </item>
         <item>
@@ -77,7 +78,7 @@ return website.Base_redirect(form_id, keep_items = {\'portal_status_message\' : 
         </item>
         <item>
             <key> <string>_params</string> </key>
-            <value> <string>dialog_id=None, **kw</string> </value>
+            <value> <string>dialog_id=None, editable_mode=0, **kw</string> </value>
         </item>
         <item>
             <key> <string>errors</string> </key>
@@ -97,13 +98,14 @@ return website.Base_redirect(form_id, keep_items = {\'portal_status_message\' : 
                   <dictionary>
                     <item>
                         <key> <string>co_argcount</string> </key>
-                        <value> <int>1</int> </value>
+                        <value> <int>2</int> </value>
                     </item>
                     <item>
                         <key> <string>co_varnames</string> </key>
                         <value>
                           <tuple>
                             <string>dialog_id</string>
+                            <string>editable_mode</string>
                             <string>kw</string>
                             <string>_getattr_</string>
                             <string>context</string>
@@ -127,6 +129,7 @@ return website.Base_redirect(form_id, keep_items = {\'portal_status_message\' : 
             <value>
               <tuple>
                 <none/>
+                <int>0</int>
               </tuple>
             </value>
         </item>
